# nova_voice_engine

./: CMakeLists.txt
include/app/: application.hpp
include/audio/: audio_manager.hpp
include/processing/: echo_canceller.hpp  noise_suppressor.hpp
src/app/: application.cpp  main.cpp
src/audio/: audio_manager.cpp
src/codec/: opus_codec.cpp
src/network/: udp_receiver.cpp  udp_sender.cpp
src/processing/: echo_canceller.cpp  noise_suppressor.cpp
src/tools/: network_test.cpp
